# botnology

./: .env.example  .env.local  .gitignore  API_DOCUMENTATION.md  API_OFFLINE_STRIPE_FIX.md  BRANCH_COMPARISON.md  BUTTON_FIX_SUMMARY.md  DEPLOYMENT.md  DEPLOYMENT_STATUS.md  ERRORHANDLING_README.md  FILE_AND_QUIZ_API_UPDATED.md  FINAL_STATUS.md  FIX_SUMMARY.md  GOOD_MORNING.md  HOW_TO_DEPLOY.md  IMPLEMENTATION_SUMMARY.md  OVERNIGHT_IMPROVEMENTS.md  Procfile  QUIZ_IMPLEMENTATION_COMPARISON.md  QUIZ_MODULE_DOCUMENTATION.md  QUIZ_MODULE_SUMMARY.md  README.md  README_FIRST.txt  SETUP.md  SITE_URL.md  STATUS.md  STRIPE_FIX_SUMMARY.md  STRIPE_SETUP_COMPLETE.md  STRIPE_VERIFICATION_COMPLETE.md  TEST_DOCUMENTATION.md  VERIFICATION_CHECKLIST.md  WEBSITE_OFFLINE_FIX.md  api_showcase.py  comparison_report.txt  comprehensive_tests.py  demo_api.py  index.html  nixpacks.toml  package-lock.json  package.json  (+10 more)
.github/: copilot-instructions.md
.vercel/: project.json
__tests__/: startCheckout.test.js
api/: index.py  index.py.py  index.py.txt  mock-lemonsqueezy.js  mock-stripe.js  requirements.txt  test.py
backend/: main.py
data/: announcements.json
frontend/: package-lock.json  package.json
public/: app.js  courses.html  courses.js  dashboard.html  dashboard.html.txt  dashboard.js  github_pat_11BXVLPGQ0dBMJKctVlTZl_S.txt  index.html  index.html.html  index.html.txt  manifest.json  manifest.json.txt  newFile.js  pricing.html  pricing.html.txt  quiz-module.html  script.html  script.js  script.js.txt  student-dashboard.html  study-hall.html  study-hall.js  style.css  sw.js  (+4 more)
(+27 files in other folders)
