[project]
name = "botnology"
version = "1.0.0"
requires-python = ">=3.10"
dependencies = [
	"fastapi==0.109.0",
	"uvicorn==0.27.0",
	"pydantic==2.5.3",
	"stripe==7.9.0",
	"openai==1.7.2",
	"python-dotenv==1.0.0",
	"mangum==0.17.0",
	"httpx==0.26.0",
]

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.vercel]
app = "api.index:app"
